Add DreamFunctions as a subproject to extend with cats

--- a/DreamFunction/CMakeLists.txt
+++ b/DreamFunction/CMakeLists.txt
@@ -1,5 +1,5 @@
-cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
-project(GentleFemto)
+#cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
+project(DreamFunctions)
 
 if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
   set(CMAKE_CXX_FLAGS "-std=c++1y ${CMAKE_CXX_FLAGS}")
@@ -11,47 +11,47 @@ set(CMAKE_MODULE_PATH $ENV{ROOTSYS}/etc/cmake)
 find_package(ROOT REQUIRED COMPONENTS MathCore RIO Hist Tree Net EG)
 include(${ROOT_USE_FILE})
 
-include_directories(${CMAKE_SOURCE_DIR} ${CMAKE_SOURCE_DIR}/src ${ROOT_INCLUDE_DIRS})
+include_directories(${CMAKE_SOURCE_DIR} ${PROJECT_SOURCE_DIR} ${CMAKE_SOURCE_DIR}/src ${ROOT_INCLUDE_DIRS})
 add_definitions(${ROOT_CXX_FLAGS})
 
 
 set(SRCS
-  ${CMAKE_SOURCE_DIR}/DreamCF.cxx
-  ${CMAKE_SOURCE_DIR}/DreamData.cxx
-  ${CMAKE_SOURCE_DIR}/DreamDist.cxx
-  ${CMAKE_SOURCE_DIR}/DreamKayTee.cxx
-  ${CMAKE_SOURCE_DIR}/DreamPair.cxx
-  ${CMAKE_SOURCE_DIR}/DreamPlot.cxx
-  ${CMAKE_SOURCE_DIR}/ReadDreamFile.cxx
-  ${CMAKE_SOURCE_DIR}/global.cxx
+  ${PROJECT_SOURCE_DIR}/DreamCF.cxx
+  ${PROJECT_SOURCE_DIR}/DreamData.cxx
+  ${PROJECT_SOURCE_DIR}/DreamDist.cxx
+  ${PROJECT_SOURCE_DIR}/DreamKayTee.cxx
+  ${PROJECT_SOURCE_DIR}/DreamPair.cxx
+  ${PROJECT_SOURCE_DIR}/DreamPlot.cxx
+  ${PROJECT_SOURCE_DIR}/ReadDreamFile.cxx
+  ${PROJECT_SOURCE_DIR}/global.cxx
   )
 
 set(HEADERS
-  ${CMAKE_SOURCE_DIR}/DreamCF.h
-  ${CMAKE_SOURCE_DIR}/DreamData.h
-  ${CMAKE_SOURCE_DIR}/DreamDist.h
-  ${CMAKE_SOURCE_DIR}/DreamKayTee.h
-  ${CMAKE_SOURCE_DIR}/DreamPair.h
-  ${CMAKE_SOURCE_DIR}/DreamPlot.h
-  ${CMAKE_SOURCE_DIR}/ReadDreamFile.h
-  ${CMAKE_SOURCE_DIR}/global.h
+  ${PROJECT_SOURCE_DIR}/DreamCF.h
+  ${PROJECT_SOURCE_DIR}/DreamData.h
+  ${PROJECT_SOURCE_DIR}/DreamDist.h
+  ${PROJECT_SOURCE_DIR}/DreamKayTee.h
+  ${PROJECT_SOURCE_DIR}/DreamPair.h
+  ${PROJECT_SOURCE_DIR}/DreamPlot.h
+  ${PROJECT_SOURCE_DIR}/ReadDreamFile.h
+  ${PROJECT_SOURCE_DIR}/global.h
   )
 
-ROOT_GENERATE_DICTIONARY(G__GentleFemto ${HEADERS} LINKDEF ${CMAKE_SOURCE_DIR}/LinkDef.h)
-add_library(GentleFemto SHARED ${SRCS} G__GentleFemto)
-target_link_libraries(GentleFemto ${ROOT_LIBRARIES})
+ROOT_GENERATE_DICTIONARY(G__DreamFunctions ${HEADERS} LINKDEF ${PROJECT_SOURCE_DIR}/LinkDef.h)
+add_library(DreamFunctions SHARED ${SRCS} G__DreamFunctions)
+target_link_libraries(DreamFunctions ${ROOT_LIBRARIES})
 
-add_executable(executeDream ${CMAKE_SOURCE_DIR}/Scripts/ExecuteCFDream.C)
-target_link_libraries(executeDream GentleFemto)
+add_executable(executeDream ${PROJECT_SOURCE_DIR}/Scripts/ExecuteCFDream.C)
+target_link_libraries(executeDream DreamFunctions)
 
-add_executable(executeEmmTee ${CMAKE_SOURCE_DIR}/Scripts/ExecuteCFmT.C)
-target_link_libraries(executeEmmTee GentleFemto)
+add_executable(executeEmmTee ${PROJECT_SOURCE_DIR}/Scripts/ExecuteCFmT.C)
+target_link_libraries(executeEmmTee DreamFunctions)
 
-add_executable(executeKayTee ${CMAKE_SOURCE_DIR}/Scripts/ExecuteCFkT.C)
-target_link_libraries(executeKayTee GentleFemto)
+add_executable(executeKayTee ${PROJECT_SOURCE_DIR}/Scripts/ExecuteCFkT.C)
+target_link_libraries(executeKayTee DreamFunctions)
 
-add_executable(executePlot ${CMAKE_SOURCE_DIR}/Scripts/ExecutePlotCF.C)
-target_link_libraries(executePlot GentleFemto)
+add_executable(executePlot ${PROJECT_SOURCE_DIR}/Scripts/ExecutePlotCF.C)
+target_link_libraries(executePlot DreamFunctions)
 
-add_executable(executeSigma ${CMAKE_SOURCE_DIR}/Scripts/ExecuteSigma.C)
-target_link_libraries(executeSigma GentleFemto)
+add_executable(executeSigma ${PROJECT_SOURCE_DIR}/Scripts/ExecuteSigma.C)
+target_link_libraries(executeSigma DreamFunctions)
