--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
 
 project(GentleFemto CXX C)
+enable_testing()
 
 add_subdirectory(DreamFunction)
 add_subdirectory(GentleKitty)
+
