--- a/GentleKitty/CMakeLists.txt
+++ b/GentleKitty/CMakeLists.txt
@@ -41,6 +41,7 @@ include_directories(${DREAM_PATH})
 set(SRCS
   ${PROJECT_SOURCE_DIR}/TidyCats.cxx
   ${PROJECT_SOURCE_DIR}/CATSInput.cxx
+  ${PROJECT_SOURCE_DIR}/CATSInputSigma0.cxx
   ${PROJECT_SOURCE_DIR}/CATSLambdaParam.cxx
   ${PROJECT_SOURCE_DIR}/SideBandFit.cxx
   )
@@ -48,6 +49,7 @@ set(SRCS
 set(HEADERS
   ${PROJECT_SOURCE_DIR}/TidyCats.h
   ${PROJECT_SOURCE_DIR}/CATSInput.h
+  ${PROJECT_SOURCE_DIR}/CATSInputSigma0.h
   ${PROJECT_SOURCE_DIR}/CATSLambdaParam.h
   ${PROJECT_SOURCE_DIR}/SideBandFit.h
   )
