Remove clutter in target_link_libraries, compiled libraries are stored in install/lib

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
-set(binFolder "${CMAKE_CURRENT_BINARY_DIR}/../install/")
-
+set(binFolder "${CMAKE_CURRENT_BINARY_DIR}/../install")
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY  ${binFolder}/lib)
 project(GentleFemto CXX C)
 enable_testing()
 
