--- a/GentleKitty/CMakeLists.txt
+++ b/GentleKitty/CMakeLists.txt
@@ -96,4 +96,7 @@ target_link_libraries(pSigma0exclusion tidyCATS -L${DREAM_LIB_PATH} DreamFunctio
 add_executable(DrawSigma ${PROJECT_SOURCE_DIR}/Scripts/DrawSigma.C)
 target_link_libraries(DrawSigma tidyCATS -L${DREAM_LIB_PATH} DreamFunctions)
 
+add_executable(TestCats ${PROJECT_SOURCE_DIR}/Scripts/TestCats.C)
+target_link_libraries(TestCats tidyCATS -L${DREAM_LIB_PATH} DreamFunctions)
+
 add_subdirectory(Test)
