Scripts to test potentials, draw them and play around with them

--- a/GentleKitty/CMakeLists.txt
+++ b/GentleKitty/CMakeLists.txt
@@ -104,4 +104,7 @@ target_link_libraries(POnlymT tidyCATS -L${DREAM_LIB_PATH} DreamFunctions)
 add_executable(CatsPlay ${PROJECT_SOURCE_DIR}/Scripts/CatsPlay.C)
 target_link_libraries(CatsPlay tidyCATS -L${DREAM_LIB_PATH} DreamFunctions)
 
+add_executable(PotentialPlay ${PROJECT_SOURCE_DIR}/Scripts/PotentialPlay.C)
+target_link_libraries(PotentialPlay tidyCATS -L${DREAM_LIB_PATH} DreamFunctions)
+
 add_subdirectory(Test)
