--- a/GentleKitty/CMakeLists.txt
+++ b/GentleKitty/CMakeLists.txt
@@ -89,13 +89,13 @@ target_link_libraries(DrawCurves tidyCATS -L${DREAM_LIB_PATH} DreamFunctions)
 add_executable(EvalpXiCurves ${PROJECT_SOURCE_DIR}/Scripts/EvalpXiCurves.C)
 target_link_libraries(EvalpXiCurves tidyCATS -L${DREAM_LIB_PATH} DreamFunctions)
 
-add_executable(pSigma0 ${PROJECT_SOURCE_DIR}/Scripts/pSigma0.C)
+add_executable(pSigma0 ${PROJECT_SOURCE_DIR}/Scripts/pSigma0_single.C)
 target_link_libraries(pSigma0 tidyCATS -L${DREAM_LIB_PATH} DreamFunctions)
 
 add_executable(pSigma0exclusion ${PROJECT_SOURCE_DIR}/Scripts/pSigma0exclusion.C)
 target_link_libraries(pSigma0exclusion tidyCATS -L${DREAM_LIB_PATH} DreamFunctions)
 
-add_executable(DrawSigma ${PROJECT_SOURCE_DIR}/Scripts/DrawSigma.C)
+add_executable(DrawSigma ${PROJECT_SOURCE_DIR}/Scripts/DrawSigma_single.C)
 target_link_libraries(DrawSigma tidyCATS -L${DREAM_LIB_PATH} DreamFunctions)
 
 add_subdirectory(Test)
