Add script to make nice exclusion plot

--- a/GentleKitty/CMakeLists.txt
+++ b/GentleKitty/CMakeLists.txt
@@ -100,6 +100,9 @@ target_link_libraries(pSigma0exclusion tidyCATS -L${DREAM_LIB_PATH} DreamFunctio
 add_executable(DrawSigma ${PROJECT_SOURCE_DIR}/Scripts/DrawSigma_single.C)
 target_link_libraries(DrawSigma tidyCATS -L${DREAM_LIB_PATH} DreamFunctions)
 
+add_executable(PlotSigmaExclusion ${PROJECT_SOURCE_DIR}/Scripts/plotSigmaExclusion.C)
+target_link_libraries(PlotSigmaExclusion tidyCATS -L${DREAM_LIB_PATH} DreamFunctions)
+
 add_executable(POnlymT ${PROJECT_SOURCE_DIR}/Scripts/POnlymT.C)
 target_link_libraries(POnlymT tidyCATS -L${DREAM_LIB_PATH} DreamFunctions)
 
