--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,4 +7,5 @@ enable_testing()
 add_subdirectory(DreamFunction)
 add_subdirectory(GentleKitty)
 add_subdirectory(Systematics)
+add_subdirectory(ForgivingQA )
 
