Implements the pT and Phi spectra in teh run script

--- a/ForgivingQA/CMakeLists.txt
+++ b/ForgivingQA/CMakeLists.txt
@@ -18,12 +18,14 @@ add_definitions(${ROOT_CXX_FLAGS})
 set(SRCS
   ${PROJECT_SOURCE_DIR}/ForgivingReader.cxx
   ${PROJECT_SOURCE_DIR}/EventQA.cxx
+  ${PROJECT_SOURCE_DIR}/TrackQA.cxx
   ${PROJECT_SOURCE_DIR}/MakeHistosGreat.cxx
  )
 
 set(HEADERS
   ${PROJECT_SOURCE_DIR}/ForgivingReader.h
   ${PROJECT_SOURCE_DIR}/EventQA.h
+  ${PROJECT_SOURCE_DIR}/TrackQA.h
   ${PROJECT_SOURCE_DIR}/MakeHistosGreat.h
   )
 add_library(ForgivingFnct STATIC ${SRCS})
