--- a/ForgivingQA/CMakeLists.txt
+++ b/ForgivingQA/CMakeLists.txt
@@ -19,6 +19,7 @@ set(SRCS
   ${PROJECT_SOURCE_DIR}/ForgivingReader.cxx
   ${PROJECT_SOURCE_DIR}/EventQA.cxx
   ${PROJECT_SOURCE_DIR}/TrackQA.cxx
+  ${PROJECT_SOURCE_DIR}/DecayQA.cxx
   ${PROJECT_SOURCE_DIR}/MakeHistosGreat.cxx
  )
 
@@ -26,6 +27,7 @@ set(HEADERS
   ${PROJECT_SOURCE_DIR}/ForgivingReader.h
   ${PROJECT_SOURCE_DIR}/EventQA.h
   ${PROJECT_SOURCE_DIR}/TrackQA.h
+  ${PROJECT_SOURCE_DIR}/DecayQA.h
   ${PROJECT_SOURCE_DIR}/MakeHistosGreat.h
   )
 add_library(ForgivingFnct STATIC ${SRCS})
