--- a/DreamFunction/CMakeLists.txt
+++ b/DreamFunction/CMakeLists.txt
@@ -13,6 +13,7 @@ include(${ROOT_USE_FILE})
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${binFolder}/DreamFunctions)
 include_directories(${CMAKE_SOURCE_DIR} ${PROJECT_SOURCE_DIR} ${CMAKE_SOURCE_DIR}/src ${ROOT_INCLUDE_DIRS})
+include_directories(${PROJECT_SOURCE_DIR}/../ForgivingQA/)
 add_definitions(${ROOT_CXX_FLAGS})
 
 set(SRCS
@@ -25,6 +26,7 @@ set(SRCS
   ${PROJECT_SOURCE_DIR}/DreamPlot.cxx
   ${PROJECT_SOURCE_DIR}/DreamSystematics.cxx
   ${PROJECT_SOURCE_DIR}/ReadDreamFile.cxx
+  ${PROJECT_SOURCE_DIR}/../ForgivingQA/ForgivingReader.cxx
   ${PROJECT_SOURCE_DIR}/global.cxx
   )
 
@@ -38,6 +40,7 @@ set(HEADERS
   ${PROJECT_SOURCE_DIR}/DreamPlot.h
   ${PROJECT_SOURCE_DIR}/DreamSystematics.h
   ${PROJECT_SOURCE_DIR}/ReadDreamFile.h
+  ${PROJECT_SOURCE_DIR}/../ForgivingQA/ForgivingReader.h
   ${PROJECT_SOURCE_DIR}/global.h
   )
 add_library(DreamFunctions STATIC ${SRCS})
