Fixes the CMake Lists to work with the new class

--- a/ForgivingQA/CMakeLists.txt
+++ b/ForgivingQA/CMakeLists.txt
@@ -21,6 +21,7 @@ set(SRCS
   ${PROJECT_SOURCE_DIR}/TrackQA.cxx
   ${PROJECT_SOURCE_DIR}/DecayQA.cxx
   ${PROJECT_SOURCE_DIR}/ForgivingFitter.cxx
+  ${PROJECT_SOURCE_DIR}/CandidateCounter.cxx
   ${PROJECT_SOURCE_DIR}/MakeHistosGreat.cxx
  )
 
@@ -30,6 +31,7 @@ set(HEADERS
   ${PROJECT_SOURCE_DIR}/TrackQA.h
   ${PROJECT_SOURCE_DIR}/DecayQA.h
   ${PROJECT_SOURCE_DIR}/ForgivingFitter.h
+  ${PROJECT_SOURCE_DIR}/CandidateCounter.h
   ${PROJECT_SOURCE_DIR}/MakeHistosGreat.h
   )
 add_library(ForgivingFnct STATIC ${SRCS})
