--- a/Systematics/CMakeLists.txt
+++ b/Systematics/CMakeLists.txt
@@ -16,14 +16,16 @@ include_directories(${CMAKE_SOURCE_DIR} ${PROJECT_SOURCE_DIR} ${CMAKE_SOURCE_DIR
 add_definitions(${ROOT_CXX_FLAGS})
 SET(KITTY_PATH "${CMAKE_SOURCE_DIR}/GentleKitty")#where are all CATS related .h files
 SET(DREAM_PATH "${CMAKE_SOURCE_DIR}/DreamFunction")#where are all CATS related .h files
+SET(FORGIVEN_PATH "${CMAKE_SOURCE_DIR}/ForgivingQA")#where are all CATS related .h files
 include_directories(${KITTY_PATH})
 include_directories(${DREAM_PATH})
+include_directories(${FORGIVEN_PATH})
 
 add_executable(systematicsSigma ${PROJECT_SOURCE_DIR}/EvalSigmaSystematics.C)
-target_link_libraries(systematicsSigma tidyCATS DreamFunctions)
+target_link_libraries(systematicsSigma tidyCATS DreamFunctions ForgivingFnct)
 
 add_executable(AddFiles ${PROJECT_SOURCE_DIR}/AddOutputs.C)
-target_link_libraries(AddFiles tidyCATS DreamFunctions)
+target_link_libraries(AddFiles tidyCATS DreamFunctions ForgivingFnct)
 
 add_executable(executeSysteamtics ${PROJECT_SOURCE_DIR}/EvalDreamSys.C)
-target_link_libraries(executeSysteamtics tidyCATS DreamFunctions)
+target_link_libraries(executeSysteamtics tidyCATS DreamFunctions ForgivingFnct)
