Adds executables to the CMake

--- a/DreamFunction/CMakeLists.txt
+++ b/DreamFunction/CMakeLists.txt
@@ -75,3 +75,21 @@ target_link_libraries(executeHEP DreamFunctions)
 
 add_executable(executeOneFile ${PROJECT_SOURCE_DIR}/Scripts/MakeOneFile.C)
 target_link_libraries(executeOneFile DreamFunctions)
+
+add_executable(executeMiniJet ${PROJECT_SOURCE_DIR}/Scripts/ExecuteMiniJet.C)
+target_link_libraries(executeMiniJet DreamFunctions)
+
+add_executable(executeMiniJetEPOS ${PROJECT_SOURCE_DIR}/Scripts/ExecuteMiniJetEPOS.C)
+target_link_libraries(executeMiniJetEPOS DreamFunctions)
+
+add_executable(executeComparisonMC ${PROJECT_SOURCE_DIR}/Scripts/executeComparisonMC.C)
+target_link_libraries(executeComparisonMC DreamFunctions)
+
+add_executable(executeCorrectBinCF ${PROJECT_SOURCE_DIR}/Scripts/executeCorrectBinCF.C)
+target_link_libraries(executeCorrectBinCF DreamFunctions)
+
+add_executable(executeQADream ${PROJECT_SOURCE_DIR}/Scripts/executeQADream.C)
+target_link_libraries(executeQADream DreamFunctions)
+
+add_executable(executePurityDream ${PROJECT_SOURCE_DIR}/Scripts/executePurityDream.C)
+target_link_libraries(executePurityDream DreamFunctions)
