Adds a pXi fitter for on the grid

--- a/GentleKitty/CMakeLists.txt
+++ b/GentleKitty/CMakeLists.txt
@@ -81,6 +81,9 @@ target_link_libraries(POnly tidyCATS -L${DREAM_LIB_PATH} DreamFunctions)
 add_executable(XiOnly ${PROJECT_SOURCE_DIR}/Scripts/XiOnly.C)
 target_link_libraries(XiOnly tidyCATS -L${DREAM_LIB_PATH} DreamFunctions)
 
+add_executable(XiOnlyOnTheGrid ${PROJECT_SOURCE_DIR}/Scripts/XiOnlyOnTheGrid)
+target_link_libraries(XiOnlyOnTheGrid tidyCATS -L${DREAM_LIB_PATH} DreamFunctions)
+
 add_executable(SideBand ${PROJECT_SOURCE_DIR}/Scripts/SideBand.C)
 target_link_libraries(SideBand tidyCATS -L${DREAM_LIB_PATH} DreamFunctions)
 
